--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    implementation 'com.codeborne:selenide:6.12.3'
+    testImplementation 'com.codeborne:selenide:6.14.0'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
 }
 
 test {
